# taskflow-fwk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/demo/parallel/: df2.graphml
include/mockup/: cpu_cruncher.h  graph_representation.h  read_graph.h
src/: cpu_cruncher.cpp  graph_representation.cpp  read_graph.cpp
tests/: cpu_cruncher.test.cpp  read_graph.test.cpp
